Style: fixed overflow

--- a/src/components/epic-panel/epic-panel.css
+++ b/src/components/epic-panel/epic-panel.css
@@ -11,7 +11,7 @@
   display: flex;
   flex-direction: column;
   max-height: 80vh;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .new-epic-button{
